added app context, TopBar improvments, fixes

--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,10 @@
   .button {
     display: inline-flex;
     align-items: center;
-    text-decoration: none;
+    /* text-decoration: none; */
     cursor: pointer;
     user-select: none;
-    border: 0;
+    /* border: 0; */
     outline: none;
   }
 }
