navigation components fixes, added routes for instant-sell child pages

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@
     /* border: 0; */
     outline: none;
   }
+
+  .side-bar-gradient {
+    background: linear-gradient(180deg, rgba(32, 32, 35, 0.74) 0%, #202023 100%);
+  }
   
 }
 
