--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,15 @@
   .cta-clip-path {
     clip-path: polygon(100% 0, 100% 100%, calc(0% + 8px) 100%, 0 calc(100% - 8px), 0 0);
   }
+
+  .bar-clip-path {
+    clip-path: polygon(100% 0%, 0% 0%, 0% 100%, 40% 100%, 40.5% 90%, 100% 90%);
+  }
+
+  .cta-tr-corner {
+    clip-path: polygon(calc(100% - 8px) 0, 100% calc(0% + 8px) , 100% 100%, 0 100%, 0 0);
+  }
+
   .bonus-wrapper-hexagon {
     position: relative;
     clip-path: polygon(0% 0%, 98% 0%, 100% 5%, 100% 100%, 2% 100%, 0% 95%);
@@ -28,14 +37,10 @@
     clip-path: inherit;
   }
 
-  .bar-clip-path {
-    clip-path: polygon(100% 0%, 0% 0%, 0% 100%, 40% 100%, 40.5% 90%, 100% 90%);
-  }
-
   .button {
     align-items: center;
     /* text-decoration: none; */
-    /* cursor: pointer; */
+    cursor: pointer;
     user-select: none;
     /* border: 0; */
     outline: none;
@@ -63,8 +68,8 @@
     url('./assets/fonts/Barlow-Regular.ttf');
 }
 
-:hover > .button, svg {
-  transition-duration: 0.2s;
+.button, svg {
+  transition: .2s ease-in-out
 }
 
 ::-webkit-scrollbar {
