--- a/src/index.css
+++ b/src/index.css
@@ -98,38 +98,35 @@ input[type='number'] {
 }
 
 /* react-slick styles */
-.slick-next::before,
-.slick-prev::before{
-  content: '';
+.card-slider .slick-list {
+  padding: 24px 0;
 }
-.slick-prev{
-  top: 45%;
-  left: -40px;
-}
-.slick-next{
-  top: 45%;
-  right: -30px;
-}
-.slick-disabled {
-  visibility: hidden;
-}
-.slick-slide {
-  padding: 0 2px;
-  flex:auto;
-  height: auto;
-}
-.slick-slide > div {
-  height: 100%;
-}
-.slick-track.card {
+.card-slider .slick-track {
   display: flex;
   margin: 0 -2px;
 }
-/* .slick-active {
-  width: fit-content;
-} */
-/* .slick-initialized {
-  width: auto ;
-  display: flex;
-  flex-direction: row;
-} */
+.card-slider .slick-slide {
+  padding: 0 2px;
+  flex: auto;
+  height: auto;
+}
+.card-slider .slick-slide > div {
+  height: 100%;
+}
+.card-slider .slick-next::before,
+.card-slider .slick-prev::before {
+  content: '';
+}
+.card-slider .slick-prev {
+  top: 45%;
+  left: -40px;
+}
+.card-slider .slick-next {
+  top: 45%;
+  right: -30px;
+}
+.card-slider .slick-disabled {
+  visibility: hidden;
+}
+
+
