wallet/page-to-next

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -167,7 +167,7 @@ input[type='number'] {
 }
 
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -189,4 +189,4 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
