--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,6 +91,10 @@ input[type='number'] {
   transition: .2s linear
 }
 
+.text {
+  padding: 0 10px;
+}
+
 .hover:hover {
   filter: brightness(1.1);
 }
