--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -104,6 +104,10 @@ input[type='number'] {
   text-transform: capitalize;
 }
 
+.first-capital:first-letter {
+  text-transform: capitalize;
+}
+
 .marked-list p {
   position: relative;
   color:white;
